tests/paczka1/fuzzy1/61695526.err
Error in line 1: bx2uxnl6 A358 25,1
Error in line 2: bx2uxnl6 S873 5,4
Error in line 7: t2sx S873 380,4
Error in line 8: t2sx S839 5,0
Error in line 13: yMTN A780 24,3
Error in line 29: x5Wb66A S839 -2,3
